--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "glob": "^7.1.6",
     "multer": "^1.4.2",
     "node-persist": "^3.1.0",
     "node-windows": "^1.0.0-beta.5",
