--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"npm run server-start \"",
     "react-start": "parcel watch ./client/index.js",
-    "server-start": "node ./server/index.js",
+    "server-start": "nodemon -r esm ./server/index.js",
     "react-build": "parcel build ./client/index.html",
     "build": "rm -rf dist && npm run react-build"
   },
@@ -20,7 +20,8 @@
   "alias": {
     "Store": "./client/store",
     "Components": "./client/components",
-    "Pages": "./client/pages"
+    "Pages": "./client/pages",
+    "ServerHelpers": "./server/helpers"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -28,11 +29,13 @@
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "glob": "^7.1.6",
     "multer": "^1.4.2",
     "node-persist": "^3.1.0",
     "node-windows": "^1.0.0-beta.5",
+    "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
@@ -45,7 +48,7 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
+    "@babel/core": "^7.11.1",
     "@babel/plugin-transform-runtime": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "concurrently": "^5.2.0",
